# DiscordGPT

./: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  pyproject.toml  test_openai.py  validate.py
.llm/: ENV_REVIEW.md  IMPLEMENTATION.md  PRD.md  QUICKSTART.md
bot_discord/: __init__.py  client.py  commands.py
config/: prompts.py  settings.py
core/: conversation.py  openai_client.py  prompt_builder.py
utils/: logger.py
